# othmaneelouardi.github.io

./: .gitignore  .nojekyll  README.md  _quarto.yml  about.html  index.html  index.qmd  pyproject.toml  requirements.txt  requirenments.text  robots.txt  search.json  sitemap.xml
_site/: index.html  robots.txt  sitemap.xml
